Reworked Nav and carousel first slide
Rebuilt nav to work with all screensizes minus mobile

Started working on the slide for the carousel

--- a/style.css
+++ b/style.css
@@ -1,7 +1,13 @@
 *, body {
-    background-color: #E6E1C9;
+    background-color: var(--base);
     padding: 0;
 }
+
+:root {
+    --base: #E6E1C9;
+}
+
+/* // Nav */
 
 #nav {
     color: black;
@@ -9,7 +15,7 @@
     padding: 1.5rem 0rem 1.5rem 0rem;
     width: 100vw;
     max-height: 25vh;
-    display: block;
+    display: flex;
 }
 
 #mobile-nav {
@@ -52,60 +58,48 @@
     #nav {
         display: none;
     }
-    
-    #mobile-nav {
-        display: block;
-    }
-    
-    #nav-right > .nav-link {
-        display: none;
-    }
     /* || Carousel */
 }
 
 @media (min-width: 576px) {
     /* || Nav */
-    
-    #mobile-nav {
-        display: none;
+    #nav {
+        display: flex;
     }
     
     #nav-right > .nav-link {
         padding: 0rem 0.75rem 0rem 0.75rem;
-        display: block;
     }
+
     /* || Carousel */
 }
 
 @media (min-width: 768px) {
     /* || Nav */ 
-    
     #nav-right > .nav-link {
         padding: 0rem 2rem 0rem 2rem;
-        display: block;
     }
     /* || Carousel */
 }
 
 @media (min-width: 992px) {
     /* || Nav */
-    
     #nav-right > .nav-link {
         padding: 0rem 3rem 0rem 3rem;
-        display: block;
     }
     /* || Carousel */
 }
 
 @media (min-width: 1200px) {
     /* || Nav */ 
-    
     #nav-right > .nav-link {
         padding: 0rem 4.5rem 0rem 4.5rem;
-        display: block;
     }
     /* || Carousel */
 }
+
+
+/* // Carousel */
 
 .carousel-indicators {
     background: none;
@@ -115,31 +109,81 @@
 #myCarousel {
     min-height: 75vh;
     max-height: 75vh;
+    min-width: 90vw;
+    max-width: 90vw;
+}
+
+#carousel-item-container {
+    min-height: 75vh;
+    max-height: 75vh;
+    /* align-items: flex-start; */
+}
+
+#details-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#first-details {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    padding-left: 15rem;
+    position: relative;
+}
+
+#first-details > h1 {
+    font-size: 20rem;
+    font-weight: 700;
+}
+
+#first-details > h2:nth-child(2) {
+    font-weight: 700;
+    font-size: 5rem;
+    position: absolute;
+    background: none;
+    z-index: 1;
+    padding-top: 11.75rem;
+    color: red;
+    align-items: flex-end;
+}
+
+#first-details > h2:nth-child(3) {
+    color: purple;
+    font-size: 5rem;
+    font-weight: 350;
+    position: absolute;
+    background: none;
+    padding-top: 18rem;
+}
+
+.dot-package {
+    position: relative;
+    display: flex;
+    justify-content: center;
 }
 
 .dot {
+    display: block;
     height: 500px;
     width: 500px;
     border-radius: 50%;
     background-color: #F1CA23;
-    display: inline-block;
     margin: 4rem;
-    position: relative;
+    /* position: fixed; */
 }
 
 #lebron {
-    position: absolute;
-    /* z-index: 1; */
-    /* left: 50%; */
-    justify-content: center;
-    align-items: center;
-    width: 1000px;
+    position: fixed;
+    margin-left: 9rem;
+    width: 350px;
     height: auto;
     background: none;
-    /* z-index: 999; */
-    /* left: 700px;
-    top: 50px; */
-    display: inline-block;
+    display: flex;
+    justify-content: center;
+
 }
 
 .carousel-indicators > li {
